[tool.poetry]
name = "cipher_chen_hongbin"
version = "0.1.1"
description = ""
authors = ["Hongbin Chen <hc3245@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
